[package]
name = "babygiant"
version = "0.1.0"
authors = ["sam-steffen <42912036+sam-steffen@users.noreply.github.com>"]
edition = "2018"

[lib]
name = "babygiant"
crate-type = ["cdylib"]

[dependencies.cpython]
version = "0.5"
features = ["extension-module"]

[dependencies]
ark-ff = "0.2.0"
ark-ec = "0.2.0"
ark-ed-on-bn254 = "0.2.0"
ark-std = "0.2.0"
hex = "0.4.3"
